chore: prepare for release (1.0.0)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dev_icons
 description: A new Flutter package.
-version: 0.0.1
-homepage:
+version: 1.0.0
+homepage: https://github.com/JideGuru/dev_icons
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
